...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarStyle"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextAppearance="@style/ToolbarTitle">

...

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/source_import_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <io.legado.app.ui.widget.recycler.scroller.FastScrollRecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            tools:ignore="SpeakableTextPresentCheck" />

        <io.legado.app.ui.widget.anima.RotateLoading
...
                android:layout_height="48dp"
                android:src="@drawable/ic_description"
                android:visibility="gone"
                app:tint="@color/secondaryText" />

            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="gone"
                android:textColor="@color/secondaryText" />
        </LinearLayout>
...
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:flexWrap="wrap"
        app:justifyContent="space_between">

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_footer_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:visibility="gone"
            tools:ignore="RtlHardcoded"
            tools:visibility="visible" />
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/secondaryText"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"
                tools:visibility="visible" />

            <io.legado.app.ui.widget.text.AccentTextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/ok"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"
...
