<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_group"
        android:title="@string/diy_source_group"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_select_new_source"
        android:title="@string/select_new_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_select_update_source"
        android:title="@string/select_update_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_keep_original_name"
        android:title="@string/keep_original_name"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_keep_group"
        android:title="@string/keep_group"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_keep_enable"
        android:title="@string/keep_enable"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_show_comment"
        android:title="@string/show_source_comment"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_remember_source_group"
        android:title="@string/import_remember_group"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_replace_source"
        android:title="@string/replace_source_on_import"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_effective_replaces"
        android:title="@string/effective_replaces"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_manual_replace_rule"
        android:title="@string/manual_replace_rule"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_replace_rule"
        android:title="@string/menu_replace_rule"
        app:showAsAction="never" />
</menu>
