...
            <item
                android:id="@+id/menu_disabled_group"
                android:title="@string/disabled" />

            <item
                android:id="@+id/menu_group_login"
                android:title="@string/need_login" />

            <item
                android:id="@+id/menu_group_null"
                android:title="@string/no_group" />

            <item
                android:id="@+id/menu_enabled_explore_group"
                android:title="@string/enabled_explore" />

            <item
...
